// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion expands 1`] = `
<div
  className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan py-2 ps-3 pe-2"
>
  <button
    aria-expanded={true}
    className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
    onClick={[Function]}
    type="button"
  >
    <h3
      className="flex-1 font-medium text-bulma text-start text-moon-14"
    >
      Default
    </h3>
    <svg
      className="text-trunks text-moon-24 transition-transform transition-200 rotate-90"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 7l9 9-9 9"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </button>
  <div
    className="overflow-hidden w-full text-bulma transition-all h-auto opacity-100 mt-2"
  >
    <div
      className="text-moon-14"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;

exports[`Accordion renders content outside 1`] = `
<div
  className="w-full rounded-moon-s-sm h-max flex flex-col items-center transparent"
>
  <button
    aria-expanded={false}
    className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer transparent rounded-moon-s-sm py-2 ps-3 pe-2"
    onClick={[Function]}
    type="button"
  >
    <h3
      className="flex-1 font-medium text-bulma text-start text-moon-14"
    >
      Test accordion
    </h3>
    <svg
      className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 7l9 9-9 9"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </button>
  <div
    className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
  >
    <div
      className="text-moon-14"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;

exports[`Accordion renders default 1`] = `
<div
  className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan py-2 ps-3 pe-2"
>
  <button
    aria-expanded={false}
    className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
    onClick={[Function]}
    type="button"
  >
    <h3
      className="flex-1 font-medium text-bulma text-start text-moon-14"
    >
      Default
    </h3>
    <svg
      className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 7l9 9-9 9"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </button>
  <div
    className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
  >
    <div
      className="text-moon-14"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;

exports[`Accordion renders default dark 1`] = `
<div
  className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan py-2 ps-3 pe-2"
>
  <button
    aria-expanded={false}
    className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
    onClick={[Function]}
    type="button"
  >
    <h3
      className="flex-1 font-medium text-bulma text-start text-moon-14"
    >
      Default
    </h3>
    <svg
      className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 7l9 9-9 9"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </button>
  <div
    className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
  >
    <div
      className="text-moon-14"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;

exports[`Accordion renders default rtl 1`] = `
<div
  dir="rtl"
>
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan py-2 ps-3 pe-2"
  >
    <button
      aria-expanded={false}
      className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-14"
      >
        Default
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders disabled 1`] = `
<div
  className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan py-2 ps-3 pe-2"
>
  <button
    aria-expanded={false}
    className="bg-gohan flex items-center relative w-full gap-1 cursor-not-allowed bg-gohan"
    onClick={[Function]}
    type="button"
  >
    <h3
      className="flex-1 font-medium text-bulma text-start text-moon-14"
    >
      Test accordion
    </h3>
    <svg
      className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 7l9 9-9 9"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </button>
  <div
    className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
  >
    <div
      className="text-moon-14"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;

exports[`Accordion renders header content 1`] = `
<div
  className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan py-2 ps-3 pe-2"
>
  <button
    aria-expanded={false}
    className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
    onClick={[Function]}
    type="button"
  >
    <h3
      className="flex-1 font-medium text-bulma text-start text-moon-14"
    >
      Test accordion
    </h3>
    <div
      className="flex text-moon-24 text-trunks"
    >
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.833 13.889h6.334m-6.334 4.222H16m-.03 7.389c-5.247 0-9.47-4.328-9.47-9.548S10.753 6.5 16 6.5s9.5 4.232 9.5 9.452c0 1.932-.583 3.73-1.583 5.227L25.5 25.5h-9.53z"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.846 21.982v-.5h-.162l-.132.095.294.404zm-3.258 2.365l-.294-.404.294.404zM21 21.981v-.5.5zM6.5 10.5v13.038h1V10.5h-1zm18 0v7.482h1V10.5h-1zM21 6H11v1h10V6zm-9.448 15.577l-3.258 2.366.587.809 3.259-2.366-.588-.81zM21 21.48h-9.154v1H21v-1zM25.5 10.5A4.5 4.5 0 0021 6v1a3.5 3.5 0 013.5 3.5h1zm-18 0A3.5 3.5 0 0111 7V6a4.5 4.5 0 00-4.5 4.5h1zm-1 13.038c0 1.226 1.39 1.934 2.381 1.214l-.587-.81a.5.5 0 01-.794-.404h-1zm18-5.556a3.5 3.5 0 01-3.5 3.5v1a4.5 4.5 0 004.5-4.5h-1z"
          fill="currentColor"
        />
      </svg>
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 10.5h.5H7zm0 13.038h-.5.5zM25 10.5h-.5.5zm0 7.482h.5-.5zM21 6.5V6v.5zm-10 0V7v-.5zm.846 15.482v-.5h-.162l-.132.095.294.404zm-3.258 2.365l-.294-.404.294.404zM21 21.981v-.5.5zM13 14a.5.5 0 100 1v-1zm6 1a.5.5 0 100-1v1zm-2.5-3.5a.5.5 0 10-1 0h1zm-1 6a.5.5 0 001 0h-1zm-9-7v13.038h1V10.5h-1zm18 0v7.482h1V10.5h-1zM21 6H11v1h10V6zm-9.448 15.577l-3.258 2.366.587.809 3.259-2.366-.588-.81zM21 21.48h-9.154v1H21v-1zM25.5 10.5A4.5 4.5 0 0021 6v1a3.5 3.5 0 013.5 3.5h1zm-18 0A3.5 3.5 0 0111 7V6a4.5 4.5 0 00-4.5 4.5h1zm-1 13.038c0 1.226 1.39 1.934 2.381 1.214l-.587-.81a.5.5 0 01-.794-.404h-1zm18-5.556a3.5 3.5 0 01-3.5 3.5v1a4.5 4.5 0 004.5-4.5h-1zM13 15h6v-1h-6v1zm2.5-3.5v6h1v-6h-1z"
          fill="currentColor"
        />
      </svg>
      <svg
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.5 10.5H6h.5zm0 3.134H7h-.5zM18.394 6.5V6v.5zm-7.894 0V7v-.5zm-.493 5.667v-.5H9.77l-.15.182.386.318zM8.27 14.271l.386.318-.386-.319zm10.123-2.104v.5-.5zm2.833-2.833h-.5.5zM24.5 20.29h.5-.5zm0 2.777H24h.5zm-11.894-6.777v.5-.5zm7.894 0v-.5.5zm.494 5.667l.355-.352-.147-.148h-.209v.5zm1.795 1.814l.356-.352-.356.352zm-10.183-1.814v.5-.5zM6 10.5v3.134h1V10.5H6zM18.394 6H10.5v1h7.894V6zM9.62 11.85l-1.735 2.102.771.637 1.735-2.104-.771-.636zm8.773-.183h-8.387v1h8.387v-1zm3.333-2.333A3.334 3.334 0 0018.394 6v1a2.334 2.334 0 012.333 2.334h1zM7 10.5A3.5 3.5 0 0110.5 7V6A4.5 4.5 0 006 10.5h1zm-1 3.134c0 1.407 1.762 2.04 2.657.955l-.771-.637A.5.5 0 017 13.634H6zm14.727-4.3a2.334 2.334 0 01-2.333 2.333v1a3.334 3.334 0 003.333-3.333h-1zM24 20.29v2.777h1v-2.777h-1zm-11.394-3.5H20.5v-1h-7.894v1zm8.032 5.519l1.796 1.814.71-.704-1.795-1.814-.71.704zm-8.032.148h8.388v-1h-8.388v1zm-2.333-3.334a2.334 2.334 0 012.333-2.333v-1a3.334 3.334 0 00-3.333 3.333h1zM25 20.291a4.5 4.5 0 00-4.5-4.5v1a3.5 3.5 0 013.5 3.5h1zm-1 2.777a.5.5 0 01-.855.352l-.711.704c.943.952 2.566.285 2.566-1.056h-1zM9.273 19.124a3.334 3.334 0 003.333 3.334v-1a2.334 2.334 0 01-2.333-2.334h-1z"
          fill="currentColor"
        />
      </svg>
    </div>
    <svg
      className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 7l9 9-9 9"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </button>
  <div
    className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
  >
    <div
      className="text-moon-14"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;

exports[`Accordion renders opened by default 1`] = `
<div
  className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan py-2 ps-3 pe-2"
>
  <button
    aria-expanded={true}
    className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
    onClick={[Function]}
    type="button"
  >
    <h3
      className="flex-1 font-medium text-bulma text-start text-moon-14"
    >
      Test accordion
    </h3>
    <svg
      className="text-trunks text-moon-24 transition-transform transition-200 rotate-90"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 7l9 9-9 9"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </button>
  <div
    className="overflow-hidden w-full text-bulma transition-all h-auto opacity-100 mt-2"
  >
    <div
      className="text-moon-14"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;

exports[`Accordion renders sizes (content outside) 1`] = `
Array [
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center transparent"
  >
    <button
      aria-expanded={false}
      className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer transparent rounded-moon-s-sm p-4"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-16"
      >
        X Large (xl)
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>,
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center transparent"
  >
    <button
      aria-expanded={false}
      className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer transparent rounded-moon-s-sm p-3"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-14"
      >
        Large (lg)
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>,
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center transparent"
  >
    <button
      aria-expanded={false}
      className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer transparent rounded-moon-s-sm py-2 ps-3 pe-2"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-14"
      >
        Medium is default (md)
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>,
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center transparent"
  >
    <button
      aria-expanded={false}
      className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer transparent rounded-moon-s-sm py-1 ps-3 pe-1"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-14"
      >
        Small (sm)
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>,
]
`;

exports[`Accordion renders sizes 1`] = `
Array [
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan p-4"
  >
    <button
      aria-expanded={false}
      className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-16"
      >
        X Large (Default)
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>,
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan p-3"
  >
    <button
      aria-expanded={false}
      className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-14"
      >
        Large (lg)
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>,
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan py-2 ps-3 pe-2"
  >
    <button
      aria-expanded={false}
      className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-14"
      >
        Medium is default (md)
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>,
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan py-1 ps-3 pe-1"
  >
    <button
      aria-expanded={false}
      className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-14"
      >
        Small (sm)
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>,
]
`;

exports[`Accordion renders with background 1`] = `
Array [
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-beerus py-2 ps-3 pe-2"
  >
    <button
      aria-expanded={false}
      className="bg-beerus flex items-center relative w-full gap-1 cursor-pointer bg-beerus"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-14"
      >
        Test accordion with backgound
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>,
  <div
    className="w-full rounded-moon-s-sm h-max flex flex-col items-center transparent"
  >
    <button
      aria-expanded={false}
      className="bg-beerus flex items-center relative w-full gap-1 cursor-pointer transparent rounded-moon-s-sm py-2 ps-3 pe-2"
      onClick={[Function]}
      type="button"
    >
      <h3
        className="flex-1 font-medium text-bulma text-start text-moon-14"
      >
        Test accordion with backgound: content outside
      </h3>
      <svg
        className="text-trunks text-moon-24 transition-transform transition-200 rtl:rotate-180"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </button>
    <div
      className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
    >
      <div
        className="text-moon-14"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </div>
    </div>
  </div>,
]
`;

exports[`Accordion renders without button 1`] = `
<div
  className="w-full rounded-moon-s-sm h-max flex flex-col items-center bg-gohan py-2 ps-3 pe-2"
>
  <button
    aria-expanded={false}
    className="bg-gohan flex items-center relative w-full gap-1 cursor-pointer bg-gohan"
    onClick={[Function]}
    type="button"
  >
    <h3
      className="flex-1 font-medium text-bulma text-start text-moon-14"
    >
      Test accordion
    </h3>
  </button>
  <div
    className="overflow-hidden w-full text-bulma transition-all h-0 opacity-0"
  >
    <div
      className="text-moon-14"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </div>
  </div>
</div>
`;
